force-app/main/default/objects/Message_Queue__c/Message_Queue__c.object-meta.xml
<CustomObject>
    <label>Message Queue</label>
    <nameField>
        <displayFormat>MQ-{0000000}</displayFormat>
        <label>Manual Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>