force-app/main/default/objects/Message_Queue__c/fields/Affected_Customer__c.field-meta.xml
<CustomField>
    <fullName>Affected_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Affected Customer to whom Manual Message was sent</description>
    <label>Affected Customer</label>
    <referenceTo>Affected_Customer__c</referenceTo>
    <relationshipLabel>Messages Queue</relationshipLabel>
    <relationshipName>Messages_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>