force-app/main/default/objects/Message_Queue__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Messages Queue</relationshipLabel>
    <relationshipName>Messages_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>