force-app/main/default/objects/Message_Queue__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <formula>IF(NOT(ISBLANK(Email_Address__c)), Email_Address__c, 
IF(NOT(ISBLANK(SMS_Phone__c)), SMS_Phone__c, 
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endpoint</label>
    <type>Text</type>
</CustomField>