force-app/main/default/objects/Message_Queue__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Incident that initiated Manual Messaging</description>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Messages Queue</relationshipLabel>
    <relationshipName>Messages_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>