force-app/main/default/objects/Message_Queue__c/fields/Message_Body_RTF__c.field-meta.xml
<CustomField>
    <fullName>Message_Body_RTF__c</fullName>
    <label>Message Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>