force-app/main/default/objects/Message_Queue__c/fields/Service_Point__c.field-meta.xml
<CustomField>
    <fullName>Service_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Affected Customer&apos;s NMI/Service Point</description>
    <label>Service Point</label>
    <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
    <relationshipLabel>Messages Queue</relationshipLabel>
    <relationshipName>Messages_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>