force-app/main/default/objects/Message_Queue__c/fields/SMS_Phone__c.field-meta.xml
<CustomField>
    <fullName>SMS_Phone__c</fullName>
    <label>SMS Phone Number</label>
    <type>Phone</type>
</CustomField>