force-app/main/default/objects/Message_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Channel__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Message_Body_RTF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>